--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx ./src",
-    "lint-fix": "eslint --fix --ext .js,jsx --ignore-path .gitignore ."
+    "lint-fix": "eslint --fix --ext .js,jsx --ignore-path .gitignore .",
+    "format": "prettier --write ./src/**/*.{js,jsx}"
   },
   "eslintConfig": {
     "extends": [
